[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/OiGuiTheme.tres" type="Theme" id=1]
[ext_resource path="res://gui/menus/NetworkMenu.gd" type="Script" id=2]

[node name="NetworkMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -101.0
margin_right = 130.0
margin_bottom = 101.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpLineEdit" type="LineEdit" parent="InputContainer"]
margin_right = 260.0
margin_bottom = 34.0
placeholder_text = "IP address"

[node name="PortLineEdit" type="LineEdit" parent="InputContainer"]
margin_top = 38.0
margin_right = 260.0
margin_bottom = 72.0
placeholder_text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="InputContainer"]
margin_top = 76.0
margin_right = 260.0
margin_bottom = 106.0
text = "Connect"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServerButton" type="Button" parent="InputContainer"]
margin_top = 110.0
margin_right = 260.0
margin_bottom = 140.0
text = "Create"
flat = true

[node name="BackButton" type="Button" parent="InputContainer"]
margin_top = 144.0
margin_right = 260.0
margin_bottom = 174.0
text = "Back"
flat = true

[node name="IpContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_bottom = -28.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalIpLabel" type="Label" parent="IpContainer"]
margin_right = 1024.0
margin_bottom = 24.0
align = 1

[connection signal="pressed" from="InputContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="InputContainer/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="InputContainer/BackButton" to="." method="_on_BackButton_pressed"]
